fix: add scrollbar styling

--- a/style.css
+++ b/style.css
@@ -1019,6 +1019,7 @@ body {
   overflow-y: auto;
 
   overflow-wrap: break-word;
+  scrollbar-width: thin;
 }
 
 .modal-window__field_title {
@@ -1033,6 +1034,20 @@ body {
   overflow-y: auto;
 
   overflow-wrap: break-word;
+}
+
+.modal-window__field::-webkit-scrollbar {
+  width: 5px;
+}
+
+.modal-window__field::-webkit-scrollbar-track {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px #9e222254;
+}
+
+.modal-window__field::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px #323746;
 }
 
 .modal-window__field_close {
